# bytepack

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: platform_gnu_linux.yml  platform_macos.yml  platform_windows.yml
doc/: README.md  design_philosophy.md  installation_and_test.md  roadmap_draft.md  user_guide.md
examples/: README.md
examples/boost_asio/: asio_udp_client.cpp  asio_udp_server.cpp  messages.h
examples/qt_socket/: UdpCommunicator.h  messages.h  qt_udp_main.cpp
include/bytepack/: bytepack.hpp
test/: CMakeLists.txt  basic_array_type_test.cpp  catch2_main.cpp  fixed_width_type_test.cpp  fundamental_type_test.cpp  std_containers_test.cpp  string_test.cpp  test_bytepack.cpp  usecase1_test.cpp
